[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites.png" type="Texture" id=2]
[ext_resource path="res://Scripts/WorldManager.gd" type="Script" id=3]
[ext_resource path="res://Assets/PublicPixel-z84yD.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/slider-sheet.png" type="Texture" id=5]
[ext_resource path="res://Assets/slider-sheet-sheet.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprite-ddd0001.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Enemys/EnemyShip.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/warning screen.png" type="Texture" id=9]
[ext_resource path="res://Scripts/ScoreManager.gd" type="Script" id=10]
[ext_resource path="res://Assets/missile.png" type="Texture" id=11]
[ext_resource path="res://Scenes/WaveSpawner.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/RepairStation.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/PauseMenu.gd" type="Script" id=14]
[ext_resource path="res://Scenes/DeathScreen.gd" type="Script" id=15]
[ext_resource path="res://Scenes/Enemys/UFOSpawner.tscn" type="PackedScene" id=16]

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0.681818 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=11]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 31 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Load"
length = 3.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 30 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_anim"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 512, 512 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0.858 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RichTextLabel:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 50, 206 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RichTextLabel2:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 213, 271 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Warning"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 512 ), Vector2( 512, 512 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 32 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0.858 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RichTextLabel:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 50, 206 ), Vector2( 50, 236 ), Vector2( 50, 206 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RichTextLabel2:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 213, 271 ), Vector2( 213, 301 ), Vector2( 213, 271 ) ]
}

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 4 )

[sub_resource type="PhysicsMaterial" id=3]

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprites" type="Sprite" parent="."]
modulate = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
position = Vector2( 221, 221 )
scale = Vector2( 117.594, 76.4063 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color( 1, 1, 1, 0.454902 )
position = Vector2( 258, 236 )
amount = 673
lifetime = 3.0
preprocess = 46.0
emission_shape = 1
emission_sphere_radius = 404.22
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 1.0
scale_amount = 3.0
scale_amount_curve = SubResource( 4 )

[node name="WaveSpawner" parent="." instance=ExtResource( 12 )]
position = Vector2( 691, 789 )

[node name="WaveSpawner2" parent="." instance=ExtResource( 12 )]
position = Vector2( 19, 26 )

[node name="UFOSpawner" parent="." instance=ExtResource( 16 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 253, 413 )
rotation = -1.57079
scale = Vector2( 1.2, 1.2 )

[node name="EnemyShip" parent="." instance=ExtResource( 8 )]
position = Vector2( 68, 48 )

[node name="EnemyShip2" parent="." instance=ExtResource( 8 )]
position = Vector2( 145, 97 )

[node name="EnemyShip3" parent="." instance=ExtResource( 8 )]
position = Vector2( 311, 68 )

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="Condition" type="Control" parent="UI"]
margin_left = 3.0
margin_top = 4.0
margin_right = 43.0
margin_bottom = 44.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Condition"]
margin_left = 9.0
margin_top = 7.0
margin_right = 87.0
margin_bottom = 33.0
mouse_filter = 2
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "CONDITION"
scroll_active = false

[node name="TextureProgress" type="TextureProgress" parent="UI/Condition"]
margin_left = 10.0
margin_top = 19.0
margin_right = 25.0
margin_bottom = 51.0
rect_scale = Vector2( 3.5, 3.5 )
mouse_filter = 2
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
fill_mode = 3

[node name="Heat" type="Control" parent="UI"]
margin_left = -5.0
margin_top = 4.0
margin_right = 35.0
margin_bottom = 44.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Heat"]
margin_left = 474.0
margin_top = 7.0
margin_right = 506.0
margin_bottom = 16.0
mouse_filter = 2
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "HEAT"
scroll_active = false

[node name="TextureProgress" type="TextureProgress" parent="UI/Heat"]
margin_left = 477.0
margin_top = 17.0
margin_right = 492.0
margin_bottom = 49.0
rect_scale = Vector2( 3.5, 3.5 )
mouse_filter = 2
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
fill_mode = 3

[node name="Oxygen" type="Control" parent="UI"]
margin_left = 66.0
margin_top = 4.0
margin_right = 106.0
margin_bottom = 44.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Oxygen"]
margin_left = 372.0
margin_top = 7.0
margin_right = 404.0
margin_bottom = 16.0
mouse_filter = 2
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "O2"
scroll_active = false

[node name="TextureProgress" type="TextureProgress" parent="UI/Oxygen"]
margin_left = 367.0
margin_top = 17.0
margin_right = 382.0
margin_bottom = 49.0
rect_scale = Vector2( 3.5, 3.5 )
mouse_filter = 2
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
fill_mode = 3

[node name="Score" type="Control" parent="UI"]
margin_left = 256.0
margin_top = 4.0
margin_right = 295.0
margin_bottom = 44.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Score"]
margin_left = -38.0
margin_top = 7.0
margin_right = 40.0
margin_bottom = 33.0
mouse_filter = 2
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "SCORE:"
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="UI/Score"]
margin_left = 10.0
margin_top = 7.0
margin_right = 88.0
margin_bottom = 33.0
mouse_filter = 2
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "0"
scroll_active = false

[node name="Missile" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Missile"]
margin_left = 385.0
margin_top = 453.0
margin_right = 463.0
margin_bottom = 479.0
mouse_filter = 2
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Missile Launched"
scroll_active = false

[node name="Missile" type="Sprite" parent="UI/Missile"]
position = Vector2( 477, 478 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 11 )
hframes = 32
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Missile/Missile"]
autoplay = "Idle"
anims/Idle = SubResource( 11 )
anims/Load = SubResource( 9 )
anims/RESET = SubResource( 10 )

[node name="WarningScreen" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 5
visible = false

[node name="ColorRect" type="ColorRect" parent="WarningScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 472.0
margin_bottom = 472.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.517647 )

[node name="TextureRect" type="TextureRect" parent="WarningScreen"]
margin_right = 512.0
margin_bottom = 512.0
rect_scale = Vector2( 1, 0.858 )
mouse_filter = 2
texture = ExtResource( 9 )

[node name="RichTextLabel" type="RichTextLabel" parent="WarningScreen"]
modulate = Color( 0.67451, 0.196078, 0.196078, 1 )
margin_left = 50.0
margin_top = 206.0
margin_right = 345.0
margin_bottom = 266.0
rect_scale = Vector2( 3, 3 )
mouse_filter = 2
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 6 )
text = "!WARNING!"
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="WarningScreen"]
modulate = Color( 0.67451, 0.196078, 0.196078, 1 )
margin_left = 213.0
margin_top = 271.0
margin_right = 622.0
margin_bottom = 331.0
rect_scale = Vector2( 0.8, 0.8 )
mouse_filter = 2
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "|CRITIC|"
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="WarningScreen"]
autoplay = "Warning"
playback_speed = 10.0
anims/RESET = SubResource( 8 )
anims/Warning = SubResource( 7 )

[node name="PauseMenu" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 37
visible = false
script = ExtResource( 14 )

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
margin_right = 512.0
margin_bottom = 512.0
color = Color( 0.0823529, 0.0823529, 0.0823529, 0.705882 )

[node name="RichTextLabel" type="RichTextLabel" parent="PauseMenu/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.0
margin_top = -100.0
margin_right = 52.0
margin_bottom = -74.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( -0.222229, 0.666672 )
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 6 )
text = "GAME PAUSED"
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="PauseMenu/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -66.0
margin_right = 215.0
margin_bottom = -6.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 6 )
text = "SCORE:"
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="PauseMenu/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 24.0
margin_top = -65.0
margin_right = 319.0
margin_bottom = -5.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 6 )
text = "0"
scroll_active = false

[node name="DeathScreen" type="CanvasLayer" parent="."]
pause_mode = 2
visible = false
script = ExtResource( 15 )

[node name="ColorRect" type="ColorRect" parent="DeathScreen"]
pause_mode = 2
margin_right = 512.0
margin_bottom = 512.0
color = Color( 0.0823529, 0.0823529, 0.0823529, 0.705882 )

[node name="RichTextLabel" type="RichTextLabel" parent="DeathScreen/ColorRect"]
pause_mode = 2
modulate = Color( 1, 0.270588, 0.27451, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -100.0
margin_right = 42.0
margin_bottom = -74.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( -0.222229, 0.666672 )
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 6 )
text = "YOU LOST"
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="DeathScreen/ColorRect"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -66.0
margin_right = 222.0
margin_bottom = -6.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 6 )
text = "SCORE:"
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="DeathScreen/ColorRect"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 31.0
margin_top = -65.0
margin_right = 326.0
margin_bottom = -5.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 6 )
text = "0"
scroll_active = false

[node name="Button" type="Button" parent="DeathScreen"]
margin_left = 210.0
margin_top = 228.0
margin_right = 286.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 12 )
text = "MENU"
flat = true

[node name="Walls" type="StaticBody2D" parent="." groups=["Walls"]]
collision_mask = 2
physics_material_override = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls" groups=["Walls"]]
polygon = PoolVector2Array( 507, 4, 4, 4, 4, 508, 508, 508, 508, 4, 519, 4, 595, 1, 630, 612, -191, 580, -157, 22, -95, -154, 434, -163, 558, -95, 541, -12, 511, -1 )

[node name="ScoreManager" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="Border" type="Sprite" parent="."]
position = Vector2( 256, 256 )
z_index = 66
texture = ExtResource( 7 )

[node name="RepairStation" parent="." instance=ExtResource( 13 )]
visible = false
z_index = 3

[node name="Timer" type="Timer" parent="RepairStation"]
pause_mode = 2
wait_time = 5.0

[connection signal="missel_launched" from="Player" to="." method="_on_Player_missel_launched"]
[connection signal="playerIsDead" from="Player" to="." method="_on_Player_playerIsDead"]
[connection signal="pressed" from="DeathScreen/Button" to="DeathScreen" method="_on_Button_pressed"]
[connection signal="playerIsAlive" from="RepairStation" to="." method="_on_RepairStation_playerIsAlive"]
[connection signal="timeout" from="RepairStation/Timer" to="." method="_on_Timer_timeout"]
